@@ -10,4 +10,5 @@ public class App {
     public static void main(String[] args) {
         SpringApplication.run(App.class);
     }
+//--add-exports=java.base/jdk.internal.misc=ALL-UNNAMED --add-exports=java.base/sun.nio.ch=ALL-UNNAMED
 }
